--- a/todoapp-vue/src/assets/main.css
+++ b/todoapp-vue/src/assets/main.css
@@ -1,12 +1,12 @@
-@import './base.css';
+/*@import './base.css';*/
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/*#app {*/
+/*  max-width: 1280px;*/
+/*  margin: 0 auto;*/
+/*  padding: 2rem;*/
 
-  font-weight: normal;
-}
+/*  font-weight: normal;*/
+/*}*/
 
 a,
 .green {
@@ -21,18 +21,18 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+/*@media (min-width: 1024px) {*/
+/*  !*body {*!*/
+/*  !*  display: flex;*!*/
+/*  !*  place-items: center;*!*/
+/*  !*}*!*/
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}
+/*  !*#app {*!*/
+/*  !*  display: grid;*!*/
+/*  !*  grid-template-columns: 1fr 1fr;*!*/
+/*  !*  padding: 0 2rem;*!*/
+/*  !*}*!*/
+/*}*/
 
 .form-check-input.completed {
   filter: none;
