--- a/backend/resources/sass/app.scss
+++ b/backend/resources/sass/app.scss
@@ -40,8 +40,43 @@
     .view {
         margin-top: 10px;
     }
+
+    form.form-delete {
+        display: inline;
+    }
+
+    .vote-controls {
+        min-width: 60px;
+        margin-right: 30px;
+        text-align: center;
+        color:  $gray-700;
+    }
+
+    span, a {
+        display: block;
+    }
+
+    span {
+        &.votes-count {
+            font-size: 25px;
+        }
+        &.favorites-count {
+            font-size: 12px;
+        }
+    }
+
+    a {
+        cursor: pointer;
+        color: $gray-600;
+
+        &.off, &.off:hover {
+            color: $gray-500;
+        }
+    }
+    &.vote-up, &.vote-down, &.favorite {
+
+    }
 }
 
-form.form-delete {
-    display: inline;
-}
+
+
